# Chat-App-Using-Django

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
Chat/: models.py  urls.py  views.py
Chat/migrations/: 0001_initial.py
Chat/templates/: room.html
backend/: settings.py  urls.py
chat/: admin.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py
djangoChat/: settings.py  urls.py
templates/: home.html  room.html
