[tool.poetry]
name = "chatapp"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<3.3"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.0"
black = "^23.11.0"
pylint = "^3.0.2"
isort = "^5.13.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
